<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="titleExpensesList">Expenses List</string>
	<string name="app_name">Expenses Calculator</string>
	<string name="restaurant">Restaurant</string>
	<string name="add_expense">Add expense</string>
	<string name="total">Total</string>
	<string name="colon">:</string>
	<string name="total_value"></string>
	<string name="prefs">Prefrences</string>
	<string name="exit">Exit</string>
	<string name="add">Add</string>
	<string name="edit">Edit</string>
	<string name="delete">Delete</string>
	<string name="description_hint">Expense description</string>
	<string name="price_hint">Price</string>
	<string name="date_hint">Date</string>
	<string name="save">Save</string>
	<string name="cancel">Cancel</string>
	<string name="errorMsgDescription">Description is missing</string>
	<string name="errorMsgPrice">Price is missing</string>
	<string name="changeCurrency">Change currency</string>
	<string name="nis_mark">₪</string>
	<string name="about">About</string>
	<string name="titlePreferences">Preferences</string>
	<string name="change_total_currency">Change total currency</string>
	<string name="change_language">Change language</string>
</resources>
